# django_generic_api

./: .gitignore  ERRORCODES.md  MANIFEST.in  README-TEST.MD  README.md  domains.txt  poetry.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
django_generic_api/: __init__.py  apps.py  config.py  default.ini  payload_models.py  services.py  tests.py  urls.py  utils.py  views.py
django_generic_api/tests/: API_fixtures.py  conftest.py  fixtures.py  test_activate.py  test_activate_email.py  test_basic.py  test_captcha.py  test_fetch.py  test_fixtures.py  test_forgot_password.py  test_login.py  test_new_password.py  test_register.py  test_save.py  test_support.py  test_views.py  time_complexity.txt
django_generic_api/tests/demo_app/: admin.py  apps.py  baker_recipes.py  models.py
django_generic_api/tests/demo_app/migrations/: 0001_initial.py
django_generic_api/tests/fixtures/: API.py  basic.py
tests/: conftest.py  test_1_to_1_fetch.py  test_1_to_1_save.py  test_activate_email.py  test_basic.py  test_captcha.py  test_fetch.py  test_forgot_password.py  test_login.py  test_new_password.py  test_register.py  test_save.py  test_user_info.py  test_user_info_update.py  test_user_profile.py  test_user_profile_update.py
tests/demo_app/: baker_recipes.py  models.py
tests/fixtures/: api.py  basic.py
