[tool.black]
line-length = 79

[tool.poetry]
name = "django-generic-api"
version = "0.1.0"
description = "A reusable Django app for generic CRUD operations based on dynamic payload"
authors = ["Naresh Jonnala <ff.jonnala@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
djangorestframework = "^3.15.2"
pydantic = "^2.10.4"
email-validator = "^2.2.0"
djangorestframework-simplejwt = "^5.3.1"
jsonschema = "^4.23.0"
django-cors-headers = "^4.6.0"
django-simple-captcha = "^0.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
model-bakery = "^1.20.0"
pytest-django = "^4.9.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
